objects/Markup_Based_Pricing__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AC - Accomodation</fullName>
                </value>
                <value>
                    <fullName>ATM - ATM</fullName>
                </value>
                <value>
                    <fullName>ATMME - ATM Metro</fullName>
                </value>
                <value>
                    <fullName>ATMRE - ATM Regional</fullName>
                </value>
                <value>
                    <fullName>ATMRT - ATM Remote</fullName>
                </value>
                <value>
                    <fullName>AUDME - Audit Metro</fullName>
                </value>
                <value>
                    <fullName>AUDRG - Audit Regional</fullName>
                </value>
                <value>
                    <fullName>AUDRT - Audit Remote</fullName>
                </value>
                <value>
                    <fullName>CA - Car Allowance</fullName>
                </value>
                <value>
                    <fullName>CIME - Cabling Installs Metro</fullName>
                </value>
                <value>
                    <fullName>CIRG - Cabling Installs Regional</fullName>
                </value>
                <value>
                    <fullName>CIRT - Cabling Installs Remote</fullName>
                </value>
                <value>
                    <fullName>CON - Contractors</fullName>
                </value>
                <value>
                    <fullName>DA - Daily Allowance</fullName>
                </value>
                <value>
                    <fullName>ER - Expense Reimbursement</fullName>
                </value>
                <value>
                    <fullName>KM - KM Salary Sacrifice</fullName>
                </value>
                <value>
                    <fullName>MA - Mileage</fullName>
                </value>
                <value>
                    <fullName>NIME - Network Install Metro</fullName>
                </value>
                <value>
                    <fullName>NIRG - Network Install Regional</fullName>
                </value>
                <value>
                    <fullName>NIRT - Network Install Remote</fullName>
                </value>
                <value>
                    <fullName>PCME - PC Installs Metro</fullName>
                </value>
                <value>
                    <fullName>PCRG - PC Install Regional</fullName>
                </value>
                <value>
                    <fullName>PCRT - PC Install Remote</fullName>
                </value>
                <value>
                    <fullName>PRME - Printer Install Metro</fullName>
                </value>
                <value>
                    <fullName>PRRG - Printer Install Regional</fullName>
                </value>
                <value>
                    <fullName>PRRT - Printer Install Remote</fullName>
                </value>
                <value>
                    <fullName>PE1 - Project expenses</fullName>
                </value>
                <value>
                    <fullName>PT1 - Pass through</fullName>
                </value>
                <value>
                    <fullName>RIME - Router Installs Metro</fullName>
                </value>
                <value>
                    <fullName>RIRG - Router Install Regional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_per_Unit__c</fullName>
        <label>Cost per Unit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Markup__c</fullName>
        <label>Markup %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_per_Unit__c</fullName>
        <formula>(Cost_per_Unit__c*Markup__c)+Cost_per_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue per Unit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Maintenance_Contract__c</fullName>
        <label>Service/Maintenance Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipLabel>Markup Based Pricing</relationshipLabel>
        <relationshipName>Markup_Based_Pricing</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Markup Based Pricing</label>
    <nameField>
        <displayFormat>MUBP-{00000}</displayFormat>
        <label>Markup Based Pricing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Markup Based Pricing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>